// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteList should render a default component 1`] = `
<Fragment>
  <List
    className="infinite-list"
    dividerStyle="none"
    paddingStyle="none"
    refCallback={[Function]}
    role="none"
  >
    <li
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <li
      className="spacer"
      key="infinite-spinner-full"
      style={
        Object {
          "height": "100%",
        }
      }
    />
    <li
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </List>
</Fragment>
`;

exports[`InfiniteList should render with initial children 1`] = `
<Fragment>
  <List
    className="infinite-list"
    dividerStyle="none"
    paddingStyle="none"
    refCallback={[Function]}
    role="none"
  >
    <li
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <ListItem
      data-infinite-list-index={0}
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key=".$item-1"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 1
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={1}
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key=".$item-2"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 2
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={2}
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key=".$item-3"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 3
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={3}
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key=".$item-4"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 4
      </div>
    </ListItem>
    <li
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </List>
</Fragment>
`;

exports[`InfiniteList should render with list props 1`] = `
<Fragment>
  <List
    className="infinite-list"
    dividerStyle="standard"
    paddingStyle="standard"
    refCallback={[Function]}
    role="listbox"
  >
    <li
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <ListItem
      data-infinite-list-index={0}
      hasChevron={false}
      isSelectable={true}
      isSelected={false}
      key=".$item-1"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 1
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={1}
      hasChevron={false}
      isSelectable={true}
      isSelected={true}
      key=".$item-2"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 2
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={2}
      hasChevron={false}
      isSelectable={true}
      isSelected={false}
      key=".$item-3"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 3
      </div>
    </ListItem>
    <ListItem
      data-infinite-list-index={3}
      hasChevron={false}
      isSelectable={true}
      isSelected={false}
      key=".$item-4"
      refCallback={[Function]}
    >
      <div
        style={
          Object {
            "height": "20px",
            "width": "100%",
          }
        }
      >
        item 4
      </div>
    </ListItem>
    <li
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </List>
</Fragment>
`;

exports[`InfiniteList should render with list with style props 1`] = `
<ul
  class="list padding-standard divider-standard infinite-list"
  role="listbox"
>
  <li
    class="spacer"
    style="height:0px"
  />
  <li
    aria-selected="false"
    class="list-item is-selectable"
    data-infinite-list-index="0"
    data-item-show-focus="true"
    role="option"
    style="background-color:pink"
    tabindex="0"
  >
    <div
      class="item-fill"
    >
      <div
        style="height:20px;width:100%"
      >
        item 1
      </div>
    </div>
  </li>
  <li
    aria-selected="true"
    class="list-item selected is-selectable"
    data-infinite-list-index="1"
    data-item-show-focus="true"
    role="option"
    style="background-color:red"
    tabindex="0"
  >
    <div
      class="item-fill"
    >
      <div
        style="height:20px;width:100%"
      >
        item 2
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="list-item is-selectable"
    data-infinite-list-index="2"
    data-item-show-focus="true"
    role="option"
    style="background-color:blue"
    tabindex="0"
  >
    <div
      class="item-fill"
    >
      <div
        style="height:20px;width:100%"
      >
        item 3
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="list-item is-selectable"
    data-infinite-list-index="3"
    data-item-show-focus="true"
    role="option"
    style="background-color:yellow"
    tabindex="0"
  >
    <div
      class="item-fill"
    >
      <div
        style="height:20px;width:100%"
      >
        item 4
      </div>
    </div>
  </li>
  <li
    class="spacer"
    style="height:0px"
  />
</ul>
`;

exports[`InfiniteList should render with no children and loading 1`] = `
<Fragment>
  <List
    className="infinite-list"
    dividerStyle="none"
    paddingStyle="none"
    refCallback={[Function]}
    role="none"
  >
    <li
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <li
      className="spacer"
      key="infinite-spinner-full"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "position": "relative",
            "width": "100%",
          }
        }
      />
    </li>
    <li
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </List>
</Fragment>
`;
